# play_motion2-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf
launch/: play_motion2.launch.py
play_motion2/: CHANGELOG.rst  CMakeLists.txt  __init__.py  package.xml
play_motion2/include/play_motion2/: client.hpp  types.hpp
play_motion2/src/play_motion2/: client.cpp  motion_planner.cpp  play_motion2_executor.cpp
play_motion2/src/utils/: motion_planner.cpp  motion_planner.hpp
play_motion2/test/: play_motion2_node_test.cpp  play_motion2_node_test.launch.py  test_client.py
play_motion2/test/controllers/src/: passthrough_controller.cpp  passthrough_controller.hpp
play_motion2_cli/: CHANGELOG.rst  package.xml
play_motion2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rpm/: ros-humble-play-motion2-cli.spec  ros-humble-play-motion2-msgs.spec  ros-humble-play-motion2.spec  ros-jazzy-play-motion2-cli.spec  ros-jazzy-play-motion2-msgs.spec  ros-jazzy-play-motion2.spec  ros-rolling-play-motion2-cli.spec  ros-rolling-play-motion2-msgs.spec  ros-rolling-play-motion2.spec  template.spec
src/play_motion2/: motion_planner.cpp  play_motion2_mgr.cpp
test/: play_motion2_node_test.launch.py
test/controllers/src/: passthrough_controller.cpp
test/rrbot/: rrbot.launch.py
